Dunno what I changed

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <title>Tamas Javor: Html me something</title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <main>
             <article>
                 <header>
-                    <h1>How I'm getting sucked into standup comedy</h1>
+                    <h1 id="mine">How I'm getting sucked into standup comedy</h1>
                 </header>
         </main>
         <p>I became a fan of Bill Burr. (see pic) I can't recall how I got introduced to him, but I love his style &lt3</p>
-        <p>It reached the point where I started working on bits in a draft email... Doing open mics would help me overcome my fear of public speaking...</p>
+        <p class="italic">It reached the point where I started working on bits in a draft email... Doing open mics would help me overcome my fear of public speaking...</p>
         <img src="images/bb.jpg" />
             </article>
 
